# social-lead-extractor-pro

./: .browserslistrc  .gitignore  ENGINES.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  weekly_incremental_sync.py
backend/: pyproject.toml  run_server.py  snapleads-backend.spec
backend/app/: database.py  main.py
backend/app/api/: routes.py  test_runner.py
backend/app/models/: schemas.py
backend/app/services/: ai_email_writer.py  anti_detection.py  auto_discovery.py  b2b_scrapers.py  bio_link_follower.py  captcha_solver.py  citation_checker.py  crm_export.py  database_search.py  direct_scrapers.py  duplicate_detector.py  email_outreach.py  enhanced_direct_scraper.py  export_service.py  extractor.py  features.py  firecrawl_service.py  fxtwitter_api.py  gbp_detection.py  gmaps_scraper.py  google_dorking.py  i18n.py  indeed_scraper.py  keyword_enhancer.py  keyword_parser.py  lead_enrichment.py  lead_scorer.py  license_service.py  live_scrapers.py  log_service.py  multi_engine_search.py  patchright_engine.py  pdf_report.py  pinterest_rss.py  platform_scrapers.py  proxy_manager.py  quality_scorer.py  reddit_extractor.py  scheduler_service.py  service_suggestion.py  (+10 more)
backend/vedicstarastro-api/: .gitignore  pyproject.toml
backend/vedicstarastro-api/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/vedicstarastro-api/app/services/: astrology.py  email.py  payment.py
textshift/backend/: pyproject.toml
textshift/backend/app/: main.py
textshift/backend/app/core/: auth.py  config.py  database.py  security.py
textshift/backend/app/ml/: __init__.py
textshift/backend/app/models/: __init__.py  ab_test.py  api_key.py  credit.py  email_campaign.py  feedback.py  model_metrics.py  model_version.py  promo.py  scan.py  subscription.py  training_run.py  training_sample.py  user.py
textshift/backend/app/routers/: admin.py  admin_extended.py  api_keys.py  auth.py  batch.py  contact.py  credits.py  email_campaigns.py  feedback.py  payment.py  promo.py  scan.py  user_settings.py  writing_tools.py
textshift/backend/app/schemas/: __init__.py  credit.py  scan.py  user.py
textshift/backend/app/services/: ab_testing_service.py  credit_service.py  email_campaign_service.py  email_service.py  feature_extractor.py  feedback_service.py  huggingface_training.py  ml_service.py  (+3 more)
textshift/backend/scripts/: setup_cron.sh  weekly_training.py
(+1979 files in other folders)
