[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.1"}
psycopg = {extras = ["binary"], version = "^3.3.3"}
dnspython = "^2.8.0"
requests = {extras = ["socks"], version = "^2.32.5"}
openpyxl = "^3.1.5"
python-multipart = "^0.0.22"
aiosqlite = "^0.22.1"
pydantic-settings = "^2.13.1"
python-dotenv = "^1.2.2"
aiohttp-socks = "^0.11.0"
openai-whisper = "^20240930"
fpdf2 = "^2.8.0"
duckdb = "^1.2.0"
httpx = "^0.27.0"
curl_cffi = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
